improve requriements handling

--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -16,6 +16,7 @@ python2latex
 poutyne
 torchmetrics
 torch>=1.6.0,<2
+# pip install torch==1.13.1+cu116 --extra-index-url https://download.pytorch.org/whl/cu116
 
 # Install a modified version of the LENS codebase by fixing PyPi broken build
 # with sentence-transformers (torch version), sentencepiece and Pandas.
